--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start": "nodemon src/server.js"
     },
     "dependencies": {
+        "dotenv": "^6.2.0",
         "express": "^4.16.4",
         "influx": "^5.0.7",
         "node-ruuvitag": "^4.1.0"
